--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,176 @@
-code article{display: flex;}
+*{
+  box-sizing: border-box;
+  color:black;
+  font-family: "poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+body {background-color:rgba(89, 162, 150, 0.804);}
+header > h1 {text-align: center;}
+
+.poppins-light {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+.poppins-regular {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+.poppins-semibold {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+}
+/*untuk memisahkan page kanan dan kiri*/
+.main-container {
+    display: flex;
+}
+/*warna dalam kotak page*/
+.container-item {
+    background-color: #f0fff0b0;
+    width: 100%;
+    border: 1px solid; 
+    padding: 24px;
+}
+/*warna dalam kotak*/
+.wrapper {
+    border: 1px solid rgb(0, 100, 187); 
+    background-color: #f0fff0;
+    padding: 10px;
+}
+/*tombol klik*/
+.button {
+    border: none;
+    color: black;
+    padding: 10px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block; 
+    font-size: 16px;
+    margin: 6px 8px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 10px;
+}
+/*animasi klik*/
+.button:active {transform: translateY(8px);}
+
+/*hitung,dow,reg*/
+.button1 {
+    background-color: #00b87e;
+    border: 3px solid #005b41;
+    margin-left: 19px;
+}
+/*ketika coursor mau ngeklik*/
+.button1:hover {background-color: #005b41;}
+
+/*reset*/
+.button2 {
+    background-color: #63acff54;
+    border: 3px solid #3204ff;
+}
+/*ketika coursor mau ngeklik*/
+.button2:hover {background-color: #3204ff;}
+
+/*konsultasi*/
+.button3 {
+    background-color: #4bb6f4;
+    border: 3px solid #1e4c74;
+}
+/*ketika coursor mau ngeklik*/
+.button3:hover {background-color: #1e4c74;}
+
+/*kotak jenis kelamin-tingi badan*/
+.box-wrapper {
+    margin: 10px;
+    padding: 2px 10px;
+}
+
+.box-wrapper > .input-gender {
+    margin-top: 10px;
+}
+/*kotak input*/
+.box-wrapper > .input-kg {
+    width: 100%;
+    padding: 9px 10px;
+    margin-top: 5px;
+    border-radius: 8px;
+    background-color: #d2ff94;
+    color: #000000; 
+}
+input {
+    color: #000000;
+}
+/*posisi gogle playstore,hasil,copyright*/
+.justify {
+    text-align: center;
+}
+/*hasil*/
+.justify > h1 {
+    font-size: 50px;
+}
+.img-button {
+    display: inline-block;
+
+    height: auto; /* Tinggi disesuaikan dengan proporsi gambar */
+    max-width: 300px; /* Maksimum lebar tombol */
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    text-indent: -9999px; /* Menyembunyikan teks yang mungkin ditampilkan */
+    margin-right: 10px;
+}
+.img-playstore {
+    background-image: url(../assets/google-play.png);
+    width: 30%;
+    padding: 11px;
+}
+.img-appstore {
+    background-image: url(../assets/app-store.png);
+    width: 25%;
+    padding: 14px;
+}
+.sosmed {
+    margin-right: 10px;
+}
+/* Media Queries untuk Responsivitas */
+@media (max-width: 768px) {
+    .main-container {
+        flex-direction: column;
+    }
+
+    .container-item {
+        padding: 16px;
+    }
+
+    .button {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .img-button {
+        max-width: 100%;
+    }
+
+    .img-playstore, .img-appstore {
+        width: 30%;
+        padding: 14px;
+    }
+
+    .justify > h1 {
+        font-size: 30px;
+    }
+}
+
+@media (max-width: 480px) {
+    .button {
+        font-size: 14px;
+    }
+
+    .justify > h1 {
+        font-size: 24px;
+    }
+}
